fix: footer overlay error in environment variable options on mobile.

--- a/client/src/components/atoms/EnvironmentMobileActions/EnvironmentMobileActions.css
+++ b/client/src/components/atoms/EnvironmentMobileActions/EnvironmentMobileActions.css
@@ -20,12 +20,14 @@
     .Mobile-Environment-Actions{
         display: flex;
         padding: 1rem;
+        width: 100%;
+        justify-content: space-between;
         gap: .5rem;
     }
 
     .Mobile-Environment-Actions-Container{
         display: block;
-        position: fixed;
+        position: absolute;
         bottom: 0;
         background-color: #F5F5F5;
         width: 100%;
